# Android-Demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/junzzzz/calculator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  LaneDectection.cpp  native-lib.cpp
app/src/main/java/com/github/junzzzz/calculator/activities/: CalculatorActivity.java  LaneActivity.java  StartupActivity.java
app/src/main/java/com/github/junzzzz/calculator/activity/: CalculatorActivity.java  LaneActivity.java  StartupActivity.java
app/src/main/java/com/github/junzzzz/calculator/support/: Calculator.java  LaneOpenCV.java
app/src/main/res/layout/: activity_calculator.xml  activity_lane.xml  activity_startup.xml  activity_startup_button_calculator.xml  activity_startup_button_empty.xml  activity_startup_button_lane.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/github/junzzzz/calculator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
